# pymc_experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
notebooks/: first_pymc_example.ipynb
notebooks/Bayesian_Data_Analysis-Andrew_Gelman/: cap1.ipynb
src/: __init__.py
src/Bayesian_Data_Analysis-Andrew_Gelman/: import_data.py
src/bayesianbook/: __init__.py  importdata.py
